# pyexorcism

./: README.md  main.py  pyproject.toml
examples/: exorcism_4_dbqa.ipynb
src/pyexorcism/: circuit.py  generation.py  optimization.py
